springboot 2.7 -> 3.5 and java 17 -> 21